Fix for bug 182643. The data stored in the palm pilote uses ISO-Latin-1 and not UTF-8. Also, the addressbook name is in UTF-8. R=cavin, rdayal, SR=sspitzer